--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,14 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev
+      exit
+
+  - name: npm-install
+    init: |
+      cd /workspace/aws-bootcamp-cruddur-2023/frontend-react-js
+      npm i
+      exit 
+
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
