update our gitpod yml file to npm install

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -21,7 +21,10 @@ tasks:
       cd /workspace/aws-bootcamp-cruddur-2023/frontend-react-js
       npm i
       exit 
-
+  - name: react-js 
+    command: 
+      cd frontend-react-js 
+      npm i 
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
